--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -7,6 +7,7 @@
 		<PackageId>Jhoose.Security.Admin</PackageId>
 		<RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
 		<ProjectUrl>https://github.com/andrewmarkham/contentsecuritypolicy</ProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<Version>2.0.0.0</Version>
 		<Authors>Andrew Markham</Authors>
 		<Description>Interface to manage Content Security Policy and OWASP Recomended response headers</Description>
@@ -28,18 +29,18 @@
 			2.0.0 - Removed support for CMS 11/.Net Framework
 					Added support for .NET7 and .NET8
 					New  interface for managing security headers
-	</ReleaseNotes>
+		</ReleaseNotes>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
 		  ../Jhoose.Security.Core/bin/Debug;
 		  https://api.nuget.org/v3/index.json;
 		  https://nuget.optimizely.com/feed/packages.svc;
-	  </RestoreSources>
+	  	</RestoreSources>
 		<RestoreSources Condition=" '$(Configuration)' == 'Release' OR '$(Configuration)' == 'PreRelease' ">
-		  https://api.nuget.org/v3/index.json;
-		  https://nuget.optimizely.com/feed/packages.svc;
-      https://nuget.pkg.github.com/andrewmarkham/index.json
-	  </RestoreSources>
+		  	https://api.nuget.org/v3/index.json;
+		  	https://nuget.optimizely.com/feed/packages.svc;
+      		https://nuget.pkg.github.com/andrewmarkham/index.json
+	  	</RestoreSources>
 		<Configurations>Debug;Release;PreRelease</Configurations>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='PreRelease|net6.0|AnyCPU'">
@@ -63,14 +64,14 @@
 		<PackageReference Include="EPiServer.Framework" Version="[12.4.0,13)" />
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.22" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
-		<!--
-		<PackageReference Include="Jhoose.Security.Core" Version="[2.0.0.*-rc.*,3)" Condition=" '$(Configuration)' == 'PreRelease' " />
-		<PackageReference Include="Jhoose.Security.Core" Version="[2.0.0.*,3)" Condition=" '$(Configuration)' == 'Release' " />
-		-->
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0" />
+		<PackageReference Include="Teronis.MSBuild.Packaging.ProjectBuildInPackage" Version="1.0.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" />
+		<ProjectReference Include="..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" PrivateAssets="all" />
 	</ItemGroup>
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
 		<Exec Command="npm run publish" />
@@ -94,11 +95,6 @@
 			<PackagePath>content\any\any\modules\_protected\Jhoose.Security\Views</PackagePath>
 			<PackageCopyToOutput>true</PackageCopyToOutput>
 		</Content>
-		<Content Include="deploy\**" Exclude="src\**\*">
-			<Pack>true</Pack>
-			<PackagePath>content</PackagePath>
-			<PackageCopyToOutput>true</PackageCopyToOutput>
-		</Content>
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="Microsoft.Extensions.Options.ConfigurationExtensions" />
@@ -110,4 +106,7 @@
 	<ItemGroup>
 		<Folder Include="Provider\" />
 	</ItemGroup>
+	<ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+</ItemGroup>
 </Project>
