--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
@@ -7,9 +7,10 @@
 		<PackageId>Jhoose.Security.Admin</PackageId>
 		<RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
 		<ProjectUrl>https://github.com/andrewmarkham/contentsecuritypolicy</ProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<Version>2.0.0.0</Version>
 		<Authors>Andrew Markham</Authors>
-		<Description>Interface to manage Content Security Policy and OWASP Recomended response headers</Description>
+		<Description>Interface to manage Content Security Policy and OWASP Recommended response headers</Description>
 		<Title>Jhoose Security</Title>
 		<Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
 		<ReleaseNotes>
@@ -19,27 +20,27 @@
 			1.3.0 - Add .Net 6 Support
 			1.4.0 - Included support for the Optimizely nonce service.
 			1.5.0 - Remove .Net 5 Support
-			        Handle duplicate headers as this caused site to crash
+			        Handle duplicate headers as this caused the site to crash
 					Handle CRLF in header value, changed to Space
 					Make caching threadsafe
 			1.5.1 - Removed Global Serialization settings for .Net Framework see issue #52
 			1.5.2 - Add support for ws and wss protocols
-			        Add support for seperate report-uri and report-to endpoints
+			        Add support for separate report-uri and report-to endpoints
 			2.0.0 - Removed support for CMS 11/.Net Framework
-			    Added support for .NET7 and .NET8
-				New  interface for managing security headers
-	</ReleaseNotes>
+					Added support for .NET7 and .NET8
+					New  interface for managing security headers
+		</ReleaseNotes>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
 		  ../Jhoose.Security.Core/bin/Debug;
 		  https://api.nuget.org/v3/index.json;
 		  https://nuget.optimizely.com/feed/packages.svc;
-	  </RestoreSources>
+	  	</RestoreSources>
 		<RestoreSources Condition=" '$(Configuration)' == 'Release' OR '$(Configuration)' == 'PreRelease' ">
-		  https://api.nuget.org/v3/index.json;
-		  https://nuget.optimizely.com/feed/packages.svc;
-      https://nuget.pkg.github.com/andrewmarkham/index.json
-	  </RestoreSources>
+		  	https://api.nuget.org/v3/index.json;
+		  	https://nuget.optimizely.com/feed/packages.svc;
+      		https://nuget.pkg.github.com/andrewmarkham/index.json
+	  	</RestoreSources>
 		<Configurations>Debug;Release;PreRelease</Configurations>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='PreRelease|net6.0|AnyCPU'">
@@ -63,14 +64,14 @@
 		<PackageReference Include="EPiServer.Framework" Version="[12.4.0,13)" />
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.22" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
-		<!--
-		<PackageReference Include="Jhoose.Security.Core" Version="[2.0.0.*-rc.*,3)" Condition=" '$(Configuration)' == 'PreRelease' " />
-		<PackageReference Include="Jhoose.Security.Core" Version="[2.0.0.*,3)" Condition=" '$(Configuration)' == 'Release' " />
-		-->
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0" />
+		<PackageReference Include="Teronis.MSBuild.Packaging.ProjectBuildInPackage" Version="1.0.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" />
+		<ProjectReference Include="..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" PrivateAssets="all" />
 	</ItemGroup>
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
 		<Exec Command="npm run publish" />
@@ -94,11 +95,6 @@
 			<PackagePath>content\any\any\modules\_protected\Jhoose.Security\Views</PackagePath>
 			<PackageCopyToOutput>true</PackageCopyToOutput>
 		</Content>
-		<Content Include="deploy\**" Exclude="src\**\*">
-			<Pack>true</Pack>
-			<PackagePath>content</PackagePath>
-			<PackageCopyToOutput>true</PackageCopyToOutput>
-		</Content>
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="Microsoft.Extensions.Options.ConfigurationExtensions" />
@@ -110,4 +106,7 @@
 	<ItemGroup>
 		<Folder Include="Provider\" />
 	</ItemGroup>
+	<ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+</ItemGroup>
 </Project>
